--- a/source/stylesheets/background.css.scss
+++ b/source/stylesheets/background.css.scss
@@ -1,3 +1,8 @@
-body {
-  background: green;
+@import "compass";
+
+body{
+  @include background-image(linear-gradient(#ccc, #5b5b5b));
+}
+.container .jumbotron{
+  background:#fff;
 }
