--- a/source/stylesheets/raw.css
+++ b/source/stylesheets/raw.css
@@ -1,3 +1,22 @@
-body {
-  margin-top: 50px;
+dl{
+  margin:0;
+  padding:0;
+}
+
+li.articl{
+  border-bottom:2px dotted #5b5b5b;
+  padding-bottom:20px;
+  margin-bottom:20px;
+}
+ul.well-lg{
+  list-style-type:none;
+  background:#fff;
+}
+dl.well-lg{
+  background:#fff;
+}
+.asider dd{
+  border-bottom:1px solid #969696;
+  padding-bottom:10px;
+  margin-bottom:10px;
 }
