add bootstrap js

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -11,6 +11,8 @@
     %link{:href => "/css/bootstrap.min.css", :rel => "stylesheet"}/
     %link{:href => "/stylesheets/background.css", :rel => "stylesheet"}/
     %script{:src => "/js/vendor/modernizr-2.6.1.min.js"}
+    %script{:src => "/js/vendor/jquery-1.8.0.min.js"}
+    %script{:src => "/js/bootstrap.min.js"}
     = stylesheet_link_tag 'rouge'
     = stylesheet_link_tag 'raw'
   %body
