--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -20,7 +20,7 @@ per_page: 10
           %p= link_to 'Previous page', prev_page
       
       - page_articles.each_with_index do |article, i|
-        %li.articl
+        %li.article
           %h2
             = link_to article.title, article
             %span= article.date.strftime('%b %e')
