--- a/source/layout.haml
+++ b/source/layout.haml
@@ -10,11 +10,12 @@
     %link{:href => "/css/main.css", :rel => "stylesheet"}/
     %link{:href => "/css/bootstrap.min.css", :rel => "stylesheet"}/
     %link{:href => "/stylesheets/background.css", :rel => "stylesheet"}/
+    %link{:href => "/stylesheets/article.css", :rel => "stylesheet"}/
     %script{:src => "/js/vendor/modernizr-2.6.1.min.js"}
     %script{:src => "/js/vendor/jquery-1.8.0.min.js"}
     %script{:src => "/js/bootstrap.min.js"}
     = stylesheet_link_tag 'rouge'
-    = stylesheet_link_tag 'raw'
+    = stylesheet_link_tag 'home'
   %body
     %header
       %nav.navbar.navbar-default{:role=>"navigation"}
