--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -1,6 +1,8 @@
 - wrap_layout :layout do
   %article
     .title
-      = current_article.title
+      %h1.page-header.text-center
+        = current_article.title
+    %br
     = yield
   = disqus
