--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,7 +19,7 @@ per_page: 10
         - if prev_page
           %p= link_to 'Previous page', prev_page
       
-      - page_articles.each_with_index do |article, i|
+      - blog.articles.each_with_index do |article, i|
         %li.article
           %h2
             = link_to article.title, article
@@ -27,7 +27,8 @@ per_page: 10
           /
             use article.summary(250) if you have Nokogiri available to show just
             the first 250 characters
-          = article.body
+          = article.summary
+          = link_to 'Read More...', article
       - if paginate
         - if next_page
           %p= link_to 'Next page', next_page
