--- a/source/layout.haml
+++ b/source/layout.haml
@@ -3,7 +3,7 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "IE=edge;chrome=1", "http-equiv" => "X-UA-Compatible"}/
 
-    %title= current_page.data.title || "HTML5 Boilerplate"
+    %title= current_page.data.title || "Zyncro Dev Blog"
     %meta{:content => "", :name => "description"}/
     %meta{:content => "width=device-width", :name => "viewport"}/
     %link{:href => "/css/normalize.css", :rel => "stylesheet"}/
