--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -21,7 +21,7 @@ per_page: 10
             %li= link_to 'Previous page', prev_page
             %li= link_to 'Next page', next_page
       - start = (page_number-1) * per_page 
-      - blog.articles[start..(start+per_page)].each_with_index do |article, i|
+      - blog.articles[start...(start+per_page)].each_with_index do |article, i|
         %li.article
           %h2
             = link_to article.title, article
