--- a/source/stylesheets/background.css.scss
+++ b/source/stylesheets/background.css.scss
@@ -2,6 +2,7 @@
 
 body{
   //@include background-image(linear-gradient(#ccc, #5b5b5b));
+  background-color: #ccc;
   background-attachment: fixed;
 }
 .content_box{
